contrib/k8s/bootcfg-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bootcfg
  namespace: default
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: bootcfg
        phase: prod
    spec:
      containers:
        - name: bootcfg
          image: quay.io/coreos/bootcfg:v0.4.1
          ports:
            # port exposed on pod IP
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
          volumeMounts:
            - name: groups
              mountPath: /var/lib/bootcfg/groups
            - name: profiles
              mountPath: /var/lib/bootcfg/profiles
            - name: ignition
              mountPath: /var/lib/bootcfg/ignition
            - name: cloud
              mountPath: /var/lib/bootcfg/cloud
            - name: generic
              mountPath: /var/lib/bootcfg/generic
            - name: assets
              mountPath: /var/lib/bootcfg/assets
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: groups
          emptyDir: {}
        - name: profiles
          emptyDir: {}
        - name: ignition
          emptyDir: {}
        - name: cloud
          emptyDir: {}
        - name: generic
          emptyDir: {}
        - name: assets
          emptyDir: {}
