contrib/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchbox
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: matchbox
  template:
    metadata:
      labels:
        name: matchbox
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: matchbox
          image: quay.io/poseidon/matchbox:v0.9.0
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8081
          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
          volumeMounts:
            - name: config
              mountPath: /etc/matchbox
            - name: data
              mountPath: /var/lib/matchbox
            - name: assets
              mountPath: /var/lib/matchbox/assets
      volumes:
        - name: config
          secret:
            secretName: matchbox-rpc
        - name: data
          emptyDir: {}
        - name: assets
          emptyDir: {}
