contrib/k8s/matchbox-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: matchbox
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: matchbox
        phase: prod
    spec:
      containers:
        - name: matchbox
          image: quay.io/coreos/matchbox:v0.5.0
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8081
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
          volumeMounts:
            - name: config
              mountPath: /etc/matchbox
            - name: groups
              mountPath: /var/lib/matchbox/groups
            - name: profiles
              mountPath: /var/lib/matchbox/profiles
            - name: ignition
              mountPath: /var/lib/matchbox/ignition
            - name: assets
              mountPath: /var/lib/matchbox/assets
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          secret:
            secretName: matchbox-rpc
        - name: groups
          emptyDir: {}
        - name: profiles
          emptyDir: {}
        - name: ignition
          emptyDir: {}
        - name: assets
          emptyDir: {}
