contrib/k8s/matchbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matchbox
spec:
  type: NodePort
  selector:
    name: matchbox
    phase: prod
  ports:
    - protocol: TCP
      port: 80
      # port exposed on each node
      nodePort: 31488
      # name or port exposed on targeted pod(s)
      targetPort: 8080
