contrib/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matchbox
spec:
  type: ClusterIP
  selector:
    name: matchbox
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8081
      targetPort: 8081
