contrib/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: matchbox
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  # tls ... optional
  rules:
    - host: matchbox.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matchbox
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: matchbox-rpc
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - matchbox-rpc.example.com
  rules:
    - host: matchbox-rpc.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matchbox
                port:
                  number: 8081
